# fixxer

./: .gitignore  CHANGELOG.md  README.md  README_TUI.md  directory_selector.py  fixxer_tui.py  photosort.py  photosort_engine.py  photosort_pro.css  photosort_tui_styled.py  photosort_visioncrew.css  phrases.py  pyproject.toml  requirements.txt  utils.py
src/fixxer/: __init__.py  __main__.py  app.py  config.py  engine.py  phrases.py  security.py  vision.py
src/fixxer/themes/: __init__.py  pro.css  warez.css
src/fixxer/vision_providers/: __init__.py  base.py  ollama.py  openai_compat.py
