[project]
name = "photosort"
version = "9.3.0"
description = "Local-first AI photography workflow automation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0" }
authors = [
    { name = "Nick (∞vision crew)" }
]
dependencies = [
    "textual>=0.85.0",
    "rich>=13.7.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.0",
    "exifread>=3.0.0",
    "imagehash>=4.3.1",
    "pydantic>=2.0.0",
]

[project.scripts]
photosort = "photosort.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Tool Configuration ---

[tool.ruff]
# "De-vibe" the code style automatically
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"] # Errors, Pyflakes, Imports, Bugbear
ignore = []

[tool.mypy]
# Gradual typing - strictness increases over time
python_version = "3.10"
strict = false
ignore_missing_imports = true
