[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixxer"
version = "1.0.0"
description = "Professional-grade photography workflow automation with AI vision and cryptographic integrity verification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["photography", "workflow", "automation", "ai", "vision", "raw", "photo-management"]
authors = [
    {name = "BandwagonVibes"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    # Core TUI Framework
    "textual>=0.47.0",
    "rich>=13.7.0",

    # Image Processing (Core)
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",

    # RAW File Support
    "rawpy>=0.19.0",

    # Perceptual Hashing (Burst Detection)
    "ImageHash>=4.3.1",

    # EXIF Data
    "ExifRead>=3.0.0",

    # HTTP Requests (Ollama API)
    "requests>=2.31.0",

    # System Monitoring
    "psutil>=5.9.0",

    # MOVED FROM OPTIONAL TO MAIN:
    # Advanced Quality Assessment (BRISQUE)
    "image-quality>=1.2.7",
    # Advanced Burst Detection (CLIP)
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]

# Development tools
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/BandwagonVibes/fixxer"
Documentation = "https://github.com/BandwagonVibes/fixxer#readme"
Repository = "https://github.com/BandwagonVibes/fixxer.git"
"Bug Reports" = "https://github.com/BandwagonVibes/fixxer/issues"
Changelog = "https://github.com/BandwagonVibes/fixxer/releases"

[project.scripts]
# This creates the magic 'fixxer' command in the user's bin folder
fixxer = "fixxer.app:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["fixxer", "fixxer.themes"]

[tool.setuptools.package-data]
fixxer = ["themes/*.css"]

# Black code formatter configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy type checker configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/fixxer"]
omit = [
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Ruff linter configuration (modern alternative to flake8)
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

# Future: Homebrew formula metadata hints
# When creating Homebrew formula, use:
# - homepage: project.urls.Homepage
# - url: GitHub release tarball
# - dependencies: python@3.10, ollama
# - install: pip3 install (extracted formula)
